Fixed FES style load order with color rule (EDDBOOK-58)
- The new asset loading mechanism has modified the style load order
- Core FES styles now load after the fullcalendar reset
- The inherited color fixes the buttons having "invisible" text on hover

EDDBOOK-58 #time 15m

--- a/assets/css/fc-reset.css
+++ b/assets/css/fc-reset.css
@@ -73,5 +73,6 @@
 
 /* Button Styles */
 .edd-bk-bookings-calendar button:hover {
+    color: inherit;
     background: inherit;
 }
